# ELIM-Uniparthenope

./: CMakeLists.txt
src/: L10_REGIONGROWING.cpp  L1_imgwindow.cpp  L2_padding.cpp  L3_smoothing.cpp  L4_sharpening.cpp  L5_color.cpp  L6_segmentation.cpp  L7_CANNY.cpp  L7_HARRIS.cpp  L8_HOUGH.cpp  L9_OTSU.cpp
src/exam_algorithms/: canny.cpp  harris.cpp  hough_circles.cpp  hough_lines.cpp  kmeans_gray.cpp  otsu.cpp  otsu2k.cpp  region_growing.cpp  split_and_merge.cpp
src/reusables/: utils.h
